# onderwijsdata-chat

./: .env.example  .gitignore  Makefile  README.md  SECURITY.md  agent.py  app.py  auth.py  chainlit.md  config.py  data_layer.py  errors.py  index.html  instellingen.py  mkdocs.yml  persistence.py  playwright.config.js  prompt.py  pyproject.toml  rate_limit.py  report.py  resume.py  server.py  startup.sh  willma_poc.py
.chainlit/: config.toml
.chainlit/translations/: en-US.json  nl.json
.github/workflows/: docs.yml  main_onderwijsdata-chat.yml
agent/: __init__.py  dashboard.py  history.py  models.py  ratelimit.py  replay.py  run.py  stream.py  title.py
core/: auth.py  config.py  errors.py
data/: dashboard.py  instellingen.py  sector_cluster_mapping.json
demo/: .gitignore  narrate.py  record.mjs
docs/: aan-de-slag.md  databronnen.md  hosting.md  index.md  tools.md
docs/configuratie/: index.md  providers.md
docs/voorbeelden/: index.md  rapport-voorbeeld.html
export/: __init__.py  dashboard.py  report.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  auth.js  constants.js  dashboardHtml.js  devSeedDashboard.js  styles.css  workbooks.js
frontend/src/__tests__/: conversationHistory.test.js  dashboardHtml.test.js  dashboardSaveFlow.test.js  generatedDashboard.test.js  scrollToBottom.test.js  workbooks.test.js
frontend/src/components/: ConfirmModal.jsx  DashboardCreator.jsx  DashboardGallery.jsx  DashboardViewer.jsx  DataSourcesModal.jsx  GeneratedDashboard.jsx  InlineDashboard.jsx  InlineDashboardRegio.jsx  InlineDashboards.jsx  InstellingPicker.jsx  ModelPicker.jsx  Nav.jsx  ScrollToBottom.jsx  SettingsModal.jsx  WorkbookPreviews.jsx  WorkbookViewer.jsx  dashboard-shared.jsx
frontend/src/components/dashboards/: index.js
frontend/src/components/dashboards/arbeidsmarkt/: index.jsx
frontend/src/components/dashboards/deprecated/: index.jsx
frontend/src/components/dashboards/gender-diversiteit/: index.jsx
frontend/src/components/dashboards/instroom/: index.jsx
frontend/src/components/dashboards/regio-arbeidsmarkt/: index.jsx
frontend/src/components/dashboards/regio-diplomering/: index.jsx
frontend/src/components/dashboards/regio-instroom/: index.jsx
frontend/src/components/dashboards/shared/: chart-builders.js  chart-opts.js  charts-arbeidsmarkt.jsx  charts-kaart.jsx  charts-markt.jsx  charts-peers.jsx  charts-rendement.jsx  charts-sector.jsx  (+4 more)
frontend/src/hooks/: useChat.js  useDashboardChat.js  useWorkbookGallery.js
frontend/src/pages/: ChatPage.jsx  DashboardPage.jsx  HomePage.jsx  LoginPage.jsx  RapportenPage.jsx
persistence/: db.py
playground/: willma_poc.py
prompts/: __init__.py  dashboard.md  system.md
public/: prefill.js
routes/: __init__.py  auth.py  chat.py  export.py  instellingen.py  persistence.py
scripts/: refresh_sector_mapping.py
tests/: conftest.py  test_api_persistence.py  test_auth.py  test_auth_secret.py  test_catalog.py  test_cbs_store.py  test_dashboard_builder.py  test_data_layer.py  test_eval_aggregation.py  test_health.py  test_instellingen.py  test_persistence.py  test_rate_limit.py  test_replay.py  test_resume.py  test_snippet.py  test_tools_analysis.py  test_tools_cbs.py  test_tools_duo.py  test_tools_plot.py  test_tools_query.py
tests/e2e/: deep-comparison.spec.js  evaluations.json  helpers.js  model-comparison.spec.js  real-questions.spec.js
tools/: __init__.py  analysis.py  catalog.py  cbs.py  codegen.py  duo.py  plot.py  rio.py  schemas.py  snippet.py  store.py
tools/codegen/: __init__.py  llm.py  prompts.py  templates.py
ui/: actions.py  buttons.py  catalogus.py  chat.py  downloads.py  exports.py  lifecycle.py  setup.py  starters.py  uploads.py
