[project]
name = "onderwijsdata-chat"
version = "0.3.0"
description = "Chat met open Nederlandse onderwijsdata (CBS + RIO)"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=1.0",
    "litellm>=1.40",
    "plotly>=5.0",
    "python-dotenv>=1.0",
    "onderwijsdata @ git+https://github.com/cedanl/cbs-onderwijsdata.git",
    "riodata[analyse] @ git+https://github.com/cedanl/rio-onderwijsdata.git",
    "markdown>=3.10.2",
    "openpyxl>=3.1.5",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.28",
    "greenlet>=3.0",
]

[dependency-groups]
dev = [
    "watchfiles>=0.21",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.16",
    "ty>=0.0.48",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false
cache-dir = ".uv_cache"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ty.rules]
# auth.py uses sync Chainlit callbacks — wrapped at runtime (pre-existing)
# data_layer.py serialises a TypedDict field to JSON in-place (pre-existing)
invalid-argument-type = "warn"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
