[project]
name = "onderwijsdata-chat"
version = "1.6.3"
description = "Chat met open Nederlandse onderwijsdata (CBS + RIO)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "litellm>=1.40",
    "plotly>=5.0",
    "python-dotenv>=1.0",
    "onderwijsdata @ git+https://github.com/cedanl/cbs-onderwijsdata.git",
    "riodata[analyse] @ git+https://github.com/cedanl/rio-onderwijsdata.git",
    "markdown>=3.10.2",
    "openpyxl>=3.1.5",
    "nh3>=0.3.6",
    "piper-tts>=1.4.2",
    "imageio-ffmpeg>=0.6.0",
]

[dependency-groups]
dev = [
    "watchfiles>=0.21",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.16",
    "ty>=0.0.48",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false
cache-dir = ".uv_cache"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ty.rules]
invalid-argument-type = "warn"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
